# ic-rmcp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: README.md  deploy_server.sh
examples/adder/: Cargo.toml  README.md  adder.did  canister_ids.json  dfx.json
examples/adder/src/: adder_mcp.rs  boostrap.rs  controller.rs  lib.rs
examples/clock/: Cargo.toml  README.md  dfx.json
examples/clock/src/: lib.rs
examples/counter/: Cargo.toml  counter.did  dfx.json
examples/counter/src/: lib.rs
examples/weather/: Cargo.toml  README.md  dfx.json  weather.did
examples/weather/src/: lib.rs
ic-rmcp/: Cargo.toml
ic-rmcp/src/: handler.rs  lib.rs  server.rs  state.rs
ic-rmcp/src/handler/: oauth.rs
ic-rmcp/tests/: integration.rs
llms/: llms-full.txt
src/: handler.rs  lib.rs  model.rs  server.rs  service.rs  session.rs
src/model/: tool.rs
src/service/: server.rs
src/session/: memory.rs
