[package]
name = "ic_rmcp"
version = "0.1.0"
edition = "2024"
decriptions = "Rust SDK for building Model Context Protocol servers on Internet Computer canisters"
license = "MIT"
authors = ["Kyle <lhkhiem@outlook.com>", "Long Tran <tranbaolong14@gmail.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
base64 = { version = "0.21" }
paste = { version = "1" }
schemars = { version = "0.8"}