[package]
name = "adder"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-http-certification = "3.0.3"
ic-cdk-macros = "0.13"

rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" }
ic-rmcp = { path = "../../ic-rmcp" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
schemars = { version = "0.8" }
ic-http = { git = "https://github.com/ByteSmithLabs/ic-http.git", branch = "main"}