[package]
name = "adder"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-http-certification = "3.0.3"

rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" }
ic-rmcp = { path = "../../ic-rmcp" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
schemars = { version = "0.8" }
# this repo is not ready 
# ic-pluto = {git = "https://github.com/Forge-3/pluto"}
ic-pluto = { git = "https://github.com/ByteSmithLabs/pluto" }