[package]
name = "counter"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-http-certification = "3.0.3"

ic-rmcp = { git = "https://github.com/ByteSmithLabs/ic-rmcp" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
schemars = { version = "0.8" }
